fix the btn_pic.png url in sw-items.css

--- a/GY/ranking_gadget/sw-items.css
+++ b/GY/ranking_gadget/sw-items.css
@@ -1,5 +1,5 @@
 .buttonInplaceEditSubmit, .buttonInplaceEditCancel {
-  background: url("/bundles/common/images/ok_cancel_btn_pic.png") no-repeat;
+  background: url("https://sap-oxygen.github.io/GY/ranking_gadget/images/ok_cancel_btn_pic.png") no-repeat;
   height: 16px;
   width: 16px;
   cursor: pointer;
