fix urls for images (working now)

--- a/GY/ranking_gadget/ts_ranking.css
+++ b/GY/ranking_gadget/ts_ranking.css
@@ -8,7 +8,7 @@
 }
 
 .rank_status_bar {   
-    background: url(GY/ranking_gadget/images/ranking_sprites.png) no-repeat scroll 0 0 transparent;
+    background: url(images/ranking_sprites.png) no-repeat scroll 0 0 transparent;
     height: 24px;   
     display: block; 
     line-height: 24px;
@@ -89,7 +89,7 @@
 }
 
 .core_ranking .rank_title_holder .rank_title_top {    
-    background: url(GY/ranking_gadget/images/ranking_sprites.png) no-repeat scroll 0 -72px transparent;
+    background: url(images/ranking_sprites.png) no-repeat scroll 0 -72px transparent;
     height:5px;
 }
 
@@ -134,7 +134,7 @@
 .core_ranking .rank_option_input_holder {
     border-left: 1px solid #D5D5D5;
     border-right: 1px solid #D5D5D5;
-    background: url(GY/ranking_gadget/images/ranking_sprites.png) no-repeat scroll 0 -105px transparent;
+    background: url(images/ranking_sprites.png) no-repeat scroll 0 -105px transparent;
     height: 30px;
     padding: 3px 7px 2px 13px;    
 }
@@ -253,7 +253,7 @@
 .core_ranking .rank_edit .rank_remove_option {
     height: 18px;
     width: 15px;
-    background: transparent url(GY/ranking_gadget/images/remove.png) repeat scroll 0 0;
+    background: transparent url(images/remove.png) repeat scroll 0 0;
     cursor: pointer;    
     position: absolute;
     right: 2px;  
@@ -262,7 +262,7 @@
 .core_ranking .rank_edit .rank_edit_option {
     height: 18px;
     width: 15px;
-    background: transparent url(GY/ranking_gadget/images/edit.png) repeat scroll 0 0;
+    background: transparent url(images/edit.png) repeat scroll 0 0;
     cursor: pointer;    
     position: absolute;
     right: 22px;
@@ -294,12 +294,12 @@
 }
 
 .core_ranking .rank_draggable {
-    cursor: url(/bundles/common/images/hand_mouseHover.cur), move;
+    cursor: url(images/hand_mouseHover.cur), move;
     width: 100%;
 }
 
 .rank_draggable_mouse_down {
-    cursor: url(/bundles/common/images/hand_mouseDown.cur), move !important;
+    cursor: url(images/hand_mouseDown.cur), move !important;
 }
 
 
@@ -312,13 +312,13 @@
     background-color: #FAFAFA;
     border: 1px solid #FAFAFA;
     border-top: 0 none;
-    cursor: url(/bundles/common/images/hand_mouseDown.cur), move;
+    cursor: url(images/hand_mouseDown.cur), move;
 }
 
 .rank_view_bottom {
     height: 26px;       
     padding: 2px 0;    
-    background: url(GY/ranking_gadget/images/ranking_sprites.png) no-repeat scroll 0 -140px transparent;
+    background: url(images/ranking_sprites.png) no-repeat scroll 0 -140px transparent;
 }
 
 .rank_inner_holder {
@@ -363,7 +363,7 @@
     height: 34px;     
     border-left: 1px solid #D5D5D5;
     border-right: 1px solid #D5D5D5;
-    background: url(GY/ranking_gadget/images/ranking_sprites.png) no-repeat scroll 0 -105px transparent;
+    background: url(images/ranking_sprites.png) no-repeat scroll 0 -105px transparent;
     padding-bottom:1px;
 }
 
@@ -428,7 +428,7 @@
 }
 
 .rank_option_input_bottom {
-    background: url(GY/ranking_gadget/images/ranking_sprites.png) no-repeat scroll 0 -140px transparent;
+    background: url(images/ranking_sprites.png) no-repeat scroll 0 -140px transparent;
     height: 30px;   
 }
 
@@ -466,7 +466,7 @@
 }
 
 .rank_warning_icon {
-    background: transparent url(/bundles/common/images/warning_triangle.png);
+    background: transparent url(images/warning_triangle.png);
     width: 29px;
     height: 24px;
     margin-right: 17px;      
