--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -44,6 +44,16 @@ td {
 
 tr:hover {
     background-color: #F5FCFF;
+    cursor: move;
+    cursor: grab;
+    cursor: -webkit-grab;
+    cursor: -moz-grab;
+}
+
+tr:active {
+    cursor: grabbing;
+    cursor: -webkit-grabbing; 
+    cursor: -moz-grabbing;
 }
 
 .topic {
@@ -60,7 +70,6 @@ tr:hover {
 
 tr:hover .on-hover {
     display: block;
-    cursor: pointer;
 }
 
 tr:hover .off-hover {
