touch some styling of the table

--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -44,6 +44,7 @@ td {
 
 tbody tr{
     background-color: white;
+    height: 62px;
 }
 
 tbody tr:hover {
@@ -87,4 +88,9 @@ tbody tr .editable {
 
 .time-input {
     width: 60px !important;
+}
+
+.notes {
+    width: 240px;
+    max-width: 240px;
 }
