--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -3,6 +3,15 @@ body {
     overflow-y:hidden;
 }
 
+.freezed {
+    background-color: rgba(1, 1, 1, 0.7);
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+}
+
 .agenda-table table {
     border-collapse: collapse;
     font-size: 10pt;
