--- a/GY/react_opensocial/react_tutorial/bootstrap_custom.css
+++ b/GY/react_opensocial/react_tutorial/bootstrap_custom.css
@@ -1,3 +1,8 @@
+body {
+    font-family: Arial;
+    overflow-y:hidden;
+}
+
 .img-fixed {width: 48px; height: 48px; vertical-align:middle; padding: 2px;}
 .btn-vote {padding: 4px 8px;}
 .topic-align {padding-top: 4.5px;}
