make cursor pointer on hovering over editable part of a row

--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -80,7 +80,7 @@ body {
     display: none;
 }
 
-.agenda-table tbody tr .editable {
+.agenda-table tbody tr .cursor-pointer {
     cursor: pointer;
 }
 
