change grey color and fix reference error

--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -136,7 +136,7 @@ ul {
 }
 
 .row-type-grey {
-    background-color: #C0C0C0 !important;
+    background-color: #E5E5E5 !important;
 }
 
 .row-type-blue {
