--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -142,3 +142,62 @@ ul {
 .row-type-blue {
     background-color: #E7F1F7 !important;
 }
+
+ul {
+  list-style: none;
+  margin:0;
+  width: 100%;
+  float: left;
+  padding:0;
+}
+
+li div {
+    border: dashed;
+}
+
+.list-table-row {
+    display: table-row;
+}
+
+.div-table-cell {
+    display: table-cell;
+}
+
+.index-col {
+    width: 2%;
+    text-align: center;
+}
+
+.time-col {
+    width: 10%;
+    text-align: center;
+}
+
+.duration-col {
+    width: 8%;
+    text-align: center;
+}
+
+.main-col {
+    width: 50%;
+}
+
+.presenter-col {
+    width: 26%;
+}
+
+.move-col {
+    width: 2%;
+}
+
+.trash-col {
+    width: 2%;
+}
+
+.topic-cell {
+    padding: 0;
+}
+
+.desc-cell {
+    padding: 6px 0 0 8px;
+}
