--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -174,7 +174,7 @@ li div {
 }
 
 .duration-col {
-    width: 8%;
+    width: 10%;
     text-align: center;
 }
 
@@ -188,10 +188,12 @@ li div {
 
 .move-col {
     width: 2%;
+    text-align: center;
 }
 
 .trash-col {
     width: 2%;
+    text-align: center;
 }
 
 .topic-cell {
