--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -114,21 +114,12 @@ body {
     height: 48px;
 }
 
-.nopadding {
-    padding: 0 !important;
-    margin: 0 !important;
-}
-
 li {
     list-style-type: none;
 }
 
 ul {
     padding: 0 !important;
-}
-
-.sortable-header {
-    height: 39px;
 }
 
 .row-type-none {
@@ -149,6 +140,7 @@ ul {
   width: 100%;
   float: left;
   padding:0;
+  font-size: 10px;
 }
 
 li div {
@@ -161,6 +153,7 @@ li div {
 
 .div-table-cell {
     display: table-cell;
+    padding: 10px;
 }
 
 .index-col {
@@ -198,8 +191,14 @@ li div {
 
 .topic-cell {
     padding: 0;
+    font-weight: bold;
 }
 
 .desc-cell {
     padding: 6px 0 0 8px;
+}
+
+.th {
+    font-weight: bold;
+    backgroud-color: #F2F2F2;
 }
