--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial;
+    background-color: white;
     overflow-y: hidden;
 }
 
@@ -134,6 +135,10 @@ ul {
     background-color: #E7F1F7 !important;
 }
 
+#table div {
+    font-family: Arial;
+}
+
 ul {
   list-style: none;
   margin:0;
@@ -141,10 +146,6 @@ ul {
   float: left;
   padding:0;
   font-size: 10px;
-}
-
-li div {
-    border: 1px dotted;
 }
 
 .list-table-row {
@@ -159,6 +160,7 @@ li div {
 .index-col {
     width: 2%;
     text-align: center;
+    padding: 6px !important;
 }
 
 .time-col {
@@ -200,5 +202,5 @@ li div {
 
 .th {
     font-weight: bold;
-    backgroud-color: #F2F2F2;
+    background-color: #F2F2F2;
 }
