--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -58,20 +58,7 @@ body {
     height: 62px;
 }
 
-.sortable-element:hover {
-    background-color: #F5FCFF;
-    cursor: move;
-    cursor: grab;
-    cursor: -webkit-grab;
-    cursor: -moz-grab;
-}
 
-.sortable-element:active {
-    background-color: #F5FCFF;
-    cursor: grabbing;
-    cursor: -webkit-grabbing; 
-    cursor: -moz-grabbing;
-}
 
 .agenda-table tbody tr:hover .on-hover, tr:active .on-hover {
     display: block;
@@ -139,7 +126,7 @@ ul {
     font-family: Arial;
 }
 
-ul {
+.table-list {
   list-style: none;
   margin:0;
   width: 100%;
@@ -150,6 +137,7 @@ ul {
 
 .list-table-row {
     display: table-row;
+    border-bottom: 1px dotted #999;
 }
 
 .div-table-cell {
@@ -203,4 +191,23 @@ ul {
 .th {
     font-weight: bold;
     background-color: #F2F2F2;
+}
+
+#table-head {
+    display: table-row;
+}
+
+.list-table-row:hover {
+    background-color: #F5FCFF;
+    cursor: move;
+    cursor: grab;
+    cursor: -webkit-grab;
+    cursor: -moz-grab;
+}
+
+.list-table-row:active {
+    background-color: #F5FCFF;
+    cursor: grabbing;
+    cursor: -webkit-grabbing; 
+    cursor: -moz-grabbing;
 }
