--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -153,7 +153,7 @@ ul {
 .list-table-row .time-col,
 .list-table-row .duration-col,
 .list-table-row .main-col,
-.list-table-row .presetner-col {
+.list-table-row .presenter-col {
     border-bottom: 1px dotted #999;
 }
 
