--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -144,7 +144,7 @@ ul {
     background-color: #F2F2F2;
 }
 
-#table-head {
+.table-head {
     display: table-row;
 }
 
@@ -174,6 +174,6 @@ ul {
     visibility: visible;
 }
 
-#agenda-table {
+.agenda-table {
     padding: 20px 0 20px 0;
 }
