--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -164,12 +164,12 @@ ul {
     cursor: -moz-grab;
 }
 
-.list-table-row:active {
+/*.list-table-row:active {
     cursor: grabbing;
     cursor: -webkit-grabbing; 
     cursor: -moz-grabbing;
 }
-
+*/
 .list-table-row:hover .edit-col {
     visibility: visible;
 }
