--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -177,3 +177,14 @@ ul {
 .agenda-table {
     padding: 20px 0 20px 0;
 }
+
+.input-field {
+    font-style: italic; 
+    font-weight: normal; 
+    border: 1px solid #bfbfbf;
+    border-radius: 0px; 
+    padding: 7px 12px; 
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis;
+}
