--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -196,7 +196,7 @@ ul {
     margin: 10px 0px !important;
 }
 
-.selec2-container .select2-choice {
+.select2-container .select2-choice {
     font-style: normal;
     font-weight: normal;
     border: 1px solid #bfbfbf;
