adjust alignment for button

--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -241,3 +241,8 @@ ul {
 .btn-add {
     margin-right: 58px;
 }
+
+.table-button {
+    background-color: white !important;
+    text-align: right;
+}
