Pro/Con gadget version 2. 1. show a blank row if no topics. 2. add table footer with summary and full text button.

--- a/PaulChen/ProConGadget/css/PCTFoot.css
+++ b/PaulChen/ProConGadget/css/PCTFoot.css
@@ -1,12 +1,13 @@
-.PCTHead {
-  padding: 5px 0 5px 15px;
+.PCTFoot {
+  padding: 5px 5px 5px 5px;
   border-top: solid 1px #d3d3d3;
   border-bottom: solid 1px #d3d3d3;
   border-right: solid 1px #d3d3d3;
   font-weight: bold;
   height: 30px;
   width: 33%;
+  text-align: right;
   color: #000000;
-  font-size: 13px;
+  font-size: 10px;
   background-color: #f5f6f6;
 }
