--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -246,3 +246,16 @@ ul {
 .button-col {
     padding: 0px !important;
 }
+
+.btn-normal {
+    background: #f7f7f7;
+    padding: 7px 12px;
+    border: 1px solid #bfbfbf;
+    border-radius: 2px;
+    color: #333333;
+    font: 14px;
+}
+
+.btn-normal:hover {
+    background: #e5e5e5;
+}
