--- a/GY/react_opensocial/react_agenda/css/custom.css
+++ b/GY/react_opensocial/react_agenda/css/custom.css
@@ -281,7 +281,7 @@ ul {
 }
 @font-face {
   font-family: "SAP-icons";
-  src: url(fonts/SAP-icons.ttf) format('truetype'), url(fonts/SAP-icons.woff) format('woff');
+  src: url("fonts/SAP-icons.ttf") format('truetype'), url("fonts/SAP-icons.woff") format('woff');
 }
 [data-icon]:before, .sap-icon-font:before {
   font-family: 'SAP-icons';
@@ -297,7 +297,8 @@ ul {
   font-weight: normal;
   speak: none;
   display: inline-block;
-}.icon-accidental-leave:before{content:"\e000"}
+}
+.icon-accidental-leave:before{content:"\e000"}
 .icon-account:before{content:"\e001"}
 .icon-wrench:before{content:"\e002"}
 .icon-windows-doors:before{content:"\e003"}
@@ -812,13 +813,13 @@ ul {
 .icon-collapse-group:before{content:"\e200"}
 @font-face {
   font-family: 'SAP-Jam-icons';
-  src: url("/fonts/SAP-Jam-icons.eot");
+  src: url("fonts/SAP-Jam-icons.eot");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "SAP-Jam-icons";
-  src: url(/fonts/SAP-Jam-icons.ttf) format('truetype'), url(/fonts/SAP-Jam-icons.woff) format('woff');
+  src: url("fonts/SAP-Jam-icons.ttf") format('truetype'), url("fonts/SAP-Jam-icons.woff") format('woff');
 }
 [class^="jam-icon"]:before, [class*=" jam-icon-"]:before {
   font-family: 'SAP-Jam-icons';
