--- a/PaulChen/ProConGadget/css/PCTDefaultRow.css
+++ b/PaulChen/ProConGadget/css/PCTDefaultRow.css
@@ -1,12 +1,12 @@
-.PCTHead {
+.PCTDefaultRow {
   padding: 5px 0 5px 15px;
   border-top: solid 1px #000000;
-  border-bottom: solid 2px #000000;
+  border-bottom: solid 1px #000000;
   border-right: solid 1px #000000;
   font-weight: bold;
   height: 30px;
   width: 33%;
   color: #000000;
-  font-size: 13px;
-  background-color: #cccccc;
+  font-size: 15px;
+  cursor: pointer;
 }
