--- a/PaulChen/ProConGadget/css/ProConData.css
+++ b/PaulChen/ProConGadget/css/ProConData.css
@@ -7,4 +7,7 @@
   cursor: pointer;
   width: 30%;
   height: auto;
+  border-top: solid 1px #000000;
+  border-bottom: solid 1px #000000;
+  border-right: solid 1px #000000;
 }
