--- a/PaulChen/ProConGadget/css/PCTDataTable.css
+++ b/PaulChen/ProConGadget/css/PCTDataTable.css
@@ -1,8 +1,7 @@
 .PCTDataTable {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10pt;
   width: 100%;
-  border-top: solid 1px #000000;
+  border-left: solid 1px #000000;
   border-collapse: collapse;
   table-layout: fixed;
 }
