--- a/PaulChen/ProConGadget/css/PCTHead.css
+++ b/PaulChen/ProConGadget/css/PCTHead.css
@@ -3,6 +3,7 @@
   border-top: solid 1px #000000;
   border-bottom: solid 2px #000000;
   border-right: solid 1px #000000;
+  border-left: solid 1px #000000;
   font-weight: bold;
   height: 30px;
   width: 33%;
