--- a/PaulChen/ProConGadget/css/OptionData.css
+++ b/PaulChen/ProConGadget/css/OptionData.css
@@ -1,11 +1,11 @@
 .OptionData {
-  padding: 8px 0 8px 15px;
+  padding: 8px 0 8px 25px;
   border: solid 1px #000000;
   word-wrap: break-word;
-  width: 40%;
   color: #0D3A5A;
   font-family: Arial;
-  font-size: 12px;
+  font-size: 13px;
   overflow: hidden;
   vertical-align: top;
+  cursor: pointer;
 }
