--- a/PaulChen/ProConGadget/css/OptionData.css
+++ b/PaulChen/ProConGadget/css/OptionData.css
@@ -1,5 +1,5 @@
 .OptionData {
-  padding: 8px 0 8px 25px;
+  padding: 8px 8px 8px 25px;
   border: solid 1px #000000;
   word-wrap: break-word;
   color: #0D3A5A;
