refine the color of ProCon UI elements to adapt Jam style.

--- a/PaulChen/ProConGadget/css/PCTDefaultRow.css
+++ b/PaulChen/ProConGadget/css/PCTDefaultRow.css
@@ -1,6 +1,6 @@
 .PCTDefaultRow {
   padding: 5px 0 5px 25px;
-  border: solid 1px #000000;
+  border: solid 1px #ddd;
   font-weight: bold;
   height: 30px;
   width: 33%;
