--- a/PaulChen/ProConGadget/css/OptionData.css
+++ b/PaulChen/ProConGadget/css/OptionData.css
@@ -1,6 +1,6 @@
 .OptionData {
   padding: 8px 8px 8px 25px;
-  border: solid 1px #000000;
+  border: solid 1px #ddd;
   word-wrap: break-word;
   color: #0D3A5A;
   font-family: Arial;
