--- a/PaulChen/ProConGadget/css/PCTHead.css
+++ b/PaulChen/ProConGadget/css/PCTHead.css
@@ -1,13 +1,13 @@
 .PCTHead {
   padding: 5px 0 5px 15px;
-  border-top: solid 1px #000000;
-  border-bottom: solid 2px #000000;
-  border-right: solid 1px #000000;
-  border-left: solid 1px #000000;
+  border-top: solid 1px #ddd;
+  border-bottom: solid 2px #ddd;
+  border-right: solid 1px #ddd;
+  border-left: solid 1px #ddd;
   font-weight: bold;
   height: 30px;
   width: 33%;
   color: #000000;
   font-size: 13px;
-  background-color: #cccccc;
+  background-color: #f2f2f2;
 }
