--- a/testing_MB/test/Universal_URL/url.css
+++ b/testing_MB/test/Universal_URL/url.css
@@ -3,8 +3,8 @@ body {
 }
 
 #url-frame {
-    width: 100%;
-    height: 1000px;
+    width: 90%;
+    height: 90%;
     border: 1px solid grey;
 }
 
